Added team section

--- a/about-us.html
+++ b/about-us.html
@@ -197,7 +197,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold" href="/">Our Team</a>
+                <a class="nav-link fw-semibold" href="/our-team.html"
+                  >Our Team</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-semibold" href="/our-clients.html"
