--- a/contact-us.html
+++ b/contact-us.html
@@ -198,7 +198,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold" href="/">Our Team</a>
+                <a class="nav-link fw-semibold" href="/our-team.html"
+                  >Our Team</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-semibold" href="/our-clients.html"
