--- a/our-team.html
+++ b/our-team.html
@@ -8,8 +8,7 @@
     <!-- Style Sheet Link -->
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/about.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
-    <link rel="stylesheet" href="/css/career.css" />
+    <link rel="stylesheet" href="/css/team.css" />
 
     <!-- bootstrap link -->
     <link
@@ -223,7 +222,7 @@
       <div class="container position-relative">
         <div class="row">
           <div class="col-12">
-            <h1 class="display-4 text-white fw-bold mb-3">Job Opening</h1>
+            <h1 class="display-4 text-white fw-bold mb-3">Our Team</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -233,7 +232,7 @@
                   class="breadcrumb-item active text-white"
                   aria-current="page"
                 >
-                  Careers Page
+                  Our Team
                 </li>
               </ol>
             </nav>
@@ -242,288 +241,210 @@
       </div>
     </section>
 
+    <!-- Main Section -->
     <main>
-      <!-- Why Join Us Section -->
-      <section class="w-100 py-5">
+      <!-- Leadership Team Section -->
+      <section class="py-5">
         <div class="container">
-          <div
-            class="w-100 d-flex flex-column align-items-center justify-content-center mb-5"
-          >
-            <h4 class="process-badge">Why Join Us</h4>
-            <h2 class="mt-3">Be Part of Our Amazing Team</h2>
-            <p class="text-muted">
-              Join us in our mission to transform digital landscapes
-            </p>
+          <div class="section-title">
+            <h2>Our Leadership Team</h2>
+            <p class="text-muted">Meet the minds behind our success</p>
           </div>
-
           <div class="row g-4">
-            <div class="col-md-4">
-              <div class="perks-card">
-                <div class="perks-icon">
-                  <i class="fas fa-chart-line"></i>
-                </div>
-                <h4>Growth Opportunities</h4>
-                <p>
-                  Clear career progression path with continuous learning
-                  opportunities
-                </p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="perks-card">
-                <div class="perks-icon">
-                  <i class="fas fa-users"></i>
-                </div>
-                <h4>Collaborative Culture</h4>
-                <p>
-                  Work with talented professionals in a supportive environment
-                </p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="perks-card">
-                <div class="perks-icon">
-                  <i class="fas fa-medal"></i>
-                </div>
-                <h4>Work-Life Balance</h4>
-                <p>Flexible working hours and hybrid work culture</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Current Openings Section -->
-      <section class="w-100 py-5 bg-light">
-        <div class="container">
-          <div class="text-center mb-5">
-            <h2>Current Openings</h2>
-            <p class="text-muted">Join our team and make an impact</p>
-          </div>
-
-          <div class="row g-4">
-            <!-- Web Developer Position -->
-            <div class="col-lg-6">
-              <div class="job-card">
-                <div class="d-flex justify-content-between align-items-start">
-                  <h3>Web Developer</h3>
-                  <span class="job-type-badge full-time">Full Time</span>
-                </div>
-                <div class="job-info">
-                  <span
-                    ><i class="fas fa-briefcase"></i> 3-5 years experience</span
-                  >
-                  <span
-                    ><i class="fas fa-map-marker-alt"></i> Patna, India</span
-                  >
-                </div>
-                <ul class="job-requirements">
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span
-                      >Proficient in HTML, CSS, JavaScript and modern
-                      frameworks</span
-                    >
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span>Strong knowledge of PHP & Laravel</span>
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span>Excellent communication skills</span>
-                  </li>
-                </ul>
-                <button
-                  class="apply-btn mt-3"
-                  data-bs-toggle="modal"
-                  data-bs-target="#applyModal"
-                >
-                  Apply Now
-                </button>
-              </div>
-            </div>
-
-            <!-- Tax Consultant Position -->
-            <div class="col-lg-6">
-              <div class="job-card">
-                <div class="d-flex justify-content-between align-items-start">
-                  <h3>SEO Expert</h3>
-                  <span class="job-type-badge remote">Remote</span>
-                </div>
-                <div class="job-info">
-                  <span
-                    ><i class="fas fa-briefcase"></i> 2-4 years experience</span
-                  >
-                  <span
-                    ><i class="fas fa-map-marker-alt"></i> Patna, India</span
-                  >
-                </div>
-                <ul class="job-requirements">
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span
-                      >Experience in on-page and technical SEO
-                      optimization</span
-                    >
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span>Knowledge of SEO tools and analytics platforms</span>
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i>
-                    <span>Strong analytical skills</span>
-                  </li>
-                </ul>
-                <button
-                  class="apply-btn mt-3"
-                  data-bs-toggle="modal"
-                  data-bs-target="#applyModal"
-                >
-                  Apply Now
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Application Process Section -->
-      <section class="w-100 py-5">
-        <div class="container">
-          <div
-            class="text-center d-flex flex-column align-items-center justify-content-center mb-5"
-          >
-            <h4 class="process-badge">How to Apply</h4>
-            <h2 class="mt-3">Application Process</h2>
-          </div>
-
-          <div class="row g-4">
-            <div class="col-md-3">
-              <div
-                class="process-card d-flex flex-column align-items-center text-center"
-              >
-                <div class="process-icon mb-3">
-                  <i class="fas fa-file-alt fs-1"></i>
-                </div>
-                <h5>1. Submit Application</h5>
-                <p>Apply with your updated resume</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div
-                class="process-card d-flex flex-column align-items-center text-center"
-              >
-                <div class="process-icon mb-3">
-                  <i class="fas fa-phone fs-1"></i>
-                </div>
-                <h5>2. Initial Call</h5>
-                <p>Brief discussion about your experience</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div
-                class="process-card d-flex flex-column align-items-center text-center"
-              >
-                <div class="process-icon mb-3">
-                  <i class="fas fa-users fs-1"></i>
-                </div>
-                <h5>3. Interview</h5>
-                <p>Technical and cultural fit assessment</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div
-                class="process-card d-flex flex-column align-items-center text-center"
-              >
-                <div class="process-icon mb-3">
-                  <i class="fas fa-handshake fs-1"></i>
-                </div>
-                <h5>4. Offer</h5>
-                <p>Welcome to the team!</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- Job Application Modal -->
-    <div class="modal fade" id="applyModal" tabindex="-1">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Apply for Position</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form class="career-form">
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Full Name"
-                    required
+            <!-- Team Member 1 -->
+            <div class="col-lg-4 col-md-6">
+              <div class="team-member">
+                <div class="team-img">
+                  <img
+                    src="/images/email.png"
+                    loading="lazy"
+                    alt="Team Member"
+                    class="img-fluid object-fit-cover"
                   />
                 </div>
-                <div class="col-md-6">
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Email Address"
-                    required
-                  />
-                </div>
-                <div class="col-md-6">
-                  <input
-                    type="tel"
-                    class="form-control"
-                    placeholder="Phone Number"
-                    required
-                  />
-                </div>
-                <div class="col-md-6">
-                  <select class="form-select" required>
-                    <option value="">Select Position</option>
-                    <option value="ca">Chartered Accountant</option>
-                    <option value="tax">Tax Consultant</option>
-                  </select>
-                </div>
-                <div class="col-12">
-                  <textarea
-                    class="form-control"
-                    rows="4"
-                    placeholder="Cover Letter"
-                    required
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <div class="input-group">
-                    <input
-                      type="file"
-                      class="form-control"
-                      id="resume"
-                      accept=".pdf,.doc,.docx"
-                      required
-                    />
-                    <label class="input-group-text" for="resume">Resume</label>
+                <div class="team-info">
+                  <h4>Gopal Kumar</h4>
+                  <p>CEO & Founder</p>
+                  <div class="team-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn carousel-btn mt-4 w-100">
-                Submit Application
-              </button>
-            </form>
+            </div>
+            <!-- Team Member 2 -->
+            <div class="col-lg-4 col-md-6">
+              <div class="team-member">
+                <div class="team-img">
+                  <img
+                    src="/images/social-media.png"
+                    loading="lazy"
+                    alt="Team Member"
+                  />
+                </div>
+                <div class="team-info">
+                  <h4>Saket Mishra</h4>
+                  <p>Sr. SEO Executive</p>
+                  <div class="team-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Team Member 3 -->
+            <div class="col-lg-4 col-md-6">
+              <div class="team-member">
+                <div class="team-img">
+                  <img src="/images/ads.png" loading="lazy" alt="Team Member" />
+                </div>
+                <div class="team-info">
+                  <h4>Krit Ranjan</h4>
+                  <p>Human Resource (HR)</p>
+                  <div class="team-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+      </section>
+
+      <!-- Department Teams -->
+      <section class="department-section">
+        <div class="container">
+          <div class="section-title">
+            <h2>Our Expert Teams</h2>
+            <p class="text-muted">
+              Specialized professionals dedicated to your success
+            </p>
+          </div>
+
+          <!-- Development Team -->
+          <div class="mb-5">
+            <h3 class="text-center mb-4">Development Team</h3>
+            <div class="row g-4">
+              <div class="col-lg-4 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/web-design.jpg" alt="Developer" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Abhishek Kumar</h4>
+                    <p>Website Developer</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-github"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/local-seo.png" alt="google-ads" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Ashish Ranjan Deo</h4>
+                    <p>Ads Executive</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-github"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/graphic.png" alt="google-ads" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Gulam Sarwar</h4>
+                    <p>Graphic Designer</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-github"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/social-media.png" alt="google-ads" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Diksha Kumari</h4>
+                    <p>Social Media Executive</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-github"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Add more development team members -->
+            </div>
+          </div>
+
+          <!-- Marketing Team -->
+          <!-- <div class="mb-5">
+            <h3 class="text-center mb-4">Marketing Team</h3>
+            <div class="row g-4">
+              <div class="col-lg-3 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/team/marketing1.jpg" alt="Marketer" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Sarah Brown</h4>
+                    <p>SEO Specialist</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div> -->
+
+          <!-- Design Team -->
+          <!-- <div>
+            <h3 class="text-center mb-4">Design Team</h3>
+            <div class="row g-4">
+              <div class="col-lg-3 col-md-6">
+                <div class="team-member">
+                  <div class="team-img">
+                    <img src="/images/team/design1.jpg" alt="Designer" />
+                  </div>
+                  <div class="team-info">
+                    <h4>Emily Chen</h4>
+                    <p>UI/UX Designer</p>
+                    <div class="team-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="#"><i class="fab fa-dribbble"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div> -->
+        </div>
+      </section>
+    </main>
 
     <!-- footer -->
     <footer class="w-100 py-4 border-top" id="footer-section">
