--- a/about-us.html
+++ b/about-us.html
@@ -453,8 +453,18 @@
     </main>
 
     <!-- footer -->
-    <footer class="w-100 py-4 border-top" id="footer-section">
-      <div class="container">
+    <!-- footer -->
+    <footer class="w-100 py-4 border-top position-relative" id="footer-section">
+      <div
+        class="container position-absolute p-3 rounded-4 shadow-lg"
+        id="footer-overflow"
+      >
+        <div class="d-flex align-items-center justify-content-between">
+          <h4 class="fw-bold">Ready to get started?</h4>
+          <button class="btn btn-dark">Contact Us</button>
+        </div>
+      </div>
+      <div class="container mt-5">
         <div class="row">
           <div class="col-md-4">
             <div class="d-flex flex-column gap-2">
@@ -463,7 +473,7 @@
                 alt="logo"
                 class="img-fluid object-fit-cover w-75"
               />
-              <p class="fs-6">
+              <p class="fs-6 text-white">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum,
                 dolor aut doloribus possimus id amet?
               </p>
@@ -485,22 +495,24 @@
           </div>
           <div class="col-md-4">
             <div class="d-flex flex-column gap-2">
-              <h3>Top Services</h3>
+              <h3 class="text-light text-decoration-underline">Top Services</h3>
               <a
                 href="#"
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-angles-right"></i>
-                <span class="fw-semibold">Website Designing & Development</span>
+                <i class="fa-solid fa-angles-right text-white"></i>
+                <span class="fw-semibold text-white"
+                  >Website Designing & Development</span
+                >
               </a>
               <a
                 href="#"
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-angles-right"></i>
-                <span class="fw-semibold"
+                <i class="fa-solid fa-angles-right text-white"></i>
+                <span class="fw-semibold text-white"
                   >Search Engine Optimization (SEO)</span
                 >
               </a>
@@ -509,16 +521,18 @@
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-angles-right"></i>
-                <span class="fw-semibold">Google Ads & Meta Ads</span>
+                <i class="fa-solid fa-angles-right text-white"></i>
+                <span class="fw-semibold text-white"
+                  >Google Ads & Meta Ads</span
+                >
               </a>
               <a
                 href="#"
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-angles-right"></i>
-                <span class="fw-semibold"
+                <i class="fa-solid fa-angles-right text-white"></i>
+                <span class="fw-semibold text-white"
                   >Social Media Marketing & Optimization</span
                 >
               </a>
@@ -527,36 +541,40 @@
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-angles-right"></i>
-                <span class="fw-semibold">Graphic Designing</span>
+                <i class="fa-solid fa-angles-right text-white"></i>
+                <span class="fw-semibold text-white">Graphic Designing</span>
               </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="d-flex flex-column gap-2">
-              <h3>Contact Us</h3>
+              <h3 class="text-light text-decoration-underline">Contact Us</h3>
               <a
                 href="mailto:marketing@Webzyro.com"
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-envelope-circle-check fs-4"></i>
-                <span class="fw-semibold">marketing@Webzyro.com</span>
+                <i
+                  class="fa-solid fa-envelope-circle-check fs-4 text-white"
+                ></i>
+                <span class="fw-semibold text-white"
+                  >marketing@Webzyro.com</span
+                >
               </a>
               <a
                 href="tel:+91-7542025436"
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-phone fs-4"></i>
-                <span class="fw-semibold">+91-7542025436</span>
+                <i class="fa-solid fa-phone fs-4 text-white"></i>
+                <span class="fw-semibold text-white">+91-7542025436</span>
               </a>
               <div
                 class="d-flex align-items-center text-dark gap-2 text-decoration-none"
                 id="footer-service"
               >
-                <i class="fa-solid fa-location-dot fs-4"></i>
-                <span class="fw-semibold"
+                <i class="fa-solid fa-location-dot fs-4 text-white"></i>
+                <span class="fw-semibold text-white"
                   >2nd Floor, Leelavart Central, Patliputra Colony, Main Road,
                   near Petrol pump, Alpana market, Patna, Bihar 800013</span
                 >
